<resources>
    <string name="app_name">GitHubAPI</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="splash_logo_content_description">splash_logo_content_description</string>
    <string name="user_avatar_url">user_avatar_url</string>
    <string name="repositories">Repositories</string>
    <string name="account_information">Account Information</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repos">Repos</string>
    <string name="number_default">0</string>
    <string name="commit_label">Commit:</string>
    <string name="parents_label">Parents:</string>
    <string name="authored">authored</string>
    <string name="and">and</string>
    <string name="committed">committed</string>
    <string name="status_time_now">now</string>
    <string name="status_time_days_ago">%1$sd</string>
    <string name="status_time_hours_ago">%1$sh</string>
    <string name="status_time_minutes_ago">%1$sm</string>
    <string name="user_details_fragment_title">User Details</string>
    <string name="repos_fragment_title">Repositories</string>
    <string name="commits_fragment_title">Commits</string>
    <string name="na">N/A</string>
</resources>